--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,13 @@
     "dev": "nodemon src/server.mjs"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@aws-sdk/client-s3": "^3.385.0",
+    "@aws-sdk/s3-request-presigner": "^3.385.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mime-types": "^2.1.35",
+    "uuid": "^9.0.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
