--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,20 @@
 {
   "name": "frontend",
   "version": "1.0.0",
+  "alias": {
+    "process": {
+      "global": "process"
+    }
+  },
   "scripts": {
     "dev": "parcel --port 3000 src/index.html"
   },
   "devDependencies": {
-    "parcel": "^2.9.3"
+    "buffer": "^6.0.3",
+    "parcel": "^2.9.3",
+    "posthtml-expressions": "^1.11.1"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
